plugins {
    id 'java'
    id 'application'
    id 'eclipse'
    id "com.diffplug.spotless" version "6.9.0"
}

mainClassName = 'at.laborg.briss.Briss'
applicationDefaultJvmArgs = ["-Xms128m", "-Xmx1024m"]

repositories {
    maven { url "https://clojars.org/repo" } // For jpedal
    maven { url "https://maven.geotoolkit.org/" } // For jpedal transitive dependencies
    mavenCentral()
}

dependencies {
    implementation 'com.itextpdf:itextpdf:5.5.10'
    implementation 'org.jpedal:jpedal-lgpl:4.74b27'
    implementation 'org.bouncycastle:bcprov-jdk15on:1.49'
    implementation 'org.bouncycastle:bcpkix-jdk15on:1.49'

    testImplementation(platform('org.junit:junit-bom:5.9.1'))
    testImplementation('org.junit.jupiter:junit-jupiter')
}

java {
    sourceCompatibility = "1.8"
    targetCompatibility = "1.8"
}

jar {
    manifest {
        attributes 'Main-Class': application.mainClass
    }
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}

spotless {
  java {
    eclipse()
  }
}
